--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitA
 scheduler.fixed-rate=3000
 
 #Bot settings
-bot.token=6939740955:AAEnKB-RKo4DnC-RBHYif690Ya1cYEgXl0E
-bot.name=BenchHealthcheck
+bot.token=6573022791:AAHf9qUoeaYNg5rVZTyTm7YLSibbnpu7be0
+bot.name=Healthcheck
 
 #Redis settings
 spring.redis.host=localhost
